修改Latency的类型
